// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsernamePane calls \`swap\` onChange 1`] = `
Array [
  "updateEntity",
  "lock",
  1,
  "setUsername",
  "newUser",
  "any",
  false,
]
`;

exports[`UsernamePane renders correctly 1`] = `
<div
  data-__type="username_input"
  data-autoComplete={false}
  data-invalidHint="invalidErrorHint"
  data-isValid={false}
  data-onBlur={[Function]}
  data-onChange={[Function]}
  data-placeholder="placeholder"
  data-value="username"
/>
`;

exports[`UsernamePane sets \`blankErrorHint\` when username is empty 1`] = `
<div
  data-__type="username_input"
  data-autoComplete={false}
  data-invalidHint="blankErrorHint"
  data-isValid={false}
  data-onBlur={[Function]}
  data-onChange={[Function]}
  data-placeholder="placeholder"
  data-value={undefined}
/>
`;

exports[`UsernamePane sets \`usernameFormatErrorHint\` when usernameLooksLikeEmail() returns false and \`validateFormat\` is true 1`] = `
<div
  data-__type="username_input"
  data-autoComplete={false}
  data-invalidHint="usernameFormatErrorHint,min,max"
  data-isValid={false}
  data-onBlur={[Function]}
  data-onChange={[Function]}
  data-placeholder="placeholder"
  data-value="username"
/>
`;

exports[`UsernamePane sets autoComplete to true when \`allowAutocomplete\` is true 1`] = `
<div
  data-__type="username_input"
  data-autoComplete={true}
  data-invalidHint="invalidErrorHint"
  data-isValid={false}
  data-onBlur={[Function]}
  data-onChange={[Function]}
  data-placeholder="placeholder"
  data-value="username"
/>
`;

exports[`UsernamePane sets isValid as true when \`isFieldVisiblyInvalid\` is false 1`] = `
<div
  data-__type="username_input"
  data-autoComplete={false}
  data-invalidHint="invalidErrorHint"
  data-isValid={true}
  data-onBlur={[Function]}
  data-onChange={[Function]}
  data-placeholder="placeholder"
  data-value="username"
/>
`;

exports[`UsernamePane with a custom \`connectionResolver\` \`swap\` calls \`setResolvedConnection\` 1`] = `
Array [
  "model",
  "resolvedConnection",
]
`;

exports[`UsernamePane with a custom \`connectionResolver\` calls \`connectionResolver\` onBlur 1`] = `
Array [
  "username",
  Object {
    "connections": "connections",
    "id": "id",
  },
  [Function],
]
`;

exports[`UsernamePane with a custom \`connectionResolver\` calls \`swap\` in the \`connectionResolver\` callback 1`] = `
Array [
  "updateEntity",
  "lock",
  1,
  [Function],
]
`;
